--- a/src/settings.scss
+++ b/src/settings.scss
@@ -1,4 +1,302 @@
 @use 'vuetify/settings' with (
   $color-pack: true,
   $utilities: (),
+  $red: (
+    'base': var(--vt-c-red),
+    'lighten-5': var(--vt-c-red-lighten-5),
+    'lighten-4': var(--vt-c-red-lighten-4),
+    'lighten-3': var(--vt-c-red-lighten-3),
+    'lighten-2': var(--vt-c-red-lighten-2),
+    'lighten-1': var(--vt-c-red-lighten-1),
+    'darken-1': var(--vt-c-red-darken-1),
+    'darken-2': var(--vt-c-red-darken-2),
+    'darken-3': var(--vt-c-red-darken-3),
+    'darken-4': var(--vt-c-red-darken-4),
+    'accent-1': var(--vt-c-red-accent-1),
+    'accent-2': var(--vt-c-red-accent-2),
+    'accent-3': var(--vt-c-red-accent-3),
+    'accent-4': var(--vt-c-red-accent-4),
+  ),
+  $pink: (
+    'base': var(--vt-c-pink),
+    'lighten-5': var(--vt-c-pink-lighten-5),
+    'lighten-4': var(--vt-c-pink-lighten-4),
+    'lighten-3': var(--vt-c-pink-lighten-3),
+    'lighten-2': var(--vt-c-pink-lighten-2),
+    'lighten-1': var(--vt-c-pink-lighten-1),
+    'darken-1': var(--vt-c-pink-darken-1),
+    'darken-2': var(--vt-c-pink-darken-2),
+    'darken-3': var(--vt-c-pink-darken-3),
+    'darken-4': var(--vt-c-pink-darken-4),
+    'accent-1': var(--vt-c-pink-accent-1),
+    'accent-2': var(--vt-c-pink-accent-2),
+    'accent-3': var(--vt-c-pink-accent-3),
+    'accent-4': var(--vt-c-pink-accent-4),
+  ),
+  $purple: (
+    'base': var(--vt-c-purple),
+    'lighten-5': var(--vt-c-purple-lighten-5),
+    'lighten-4': var(--vt-c-purple-lighten-4),
+    'lighten-3': var(--vt-c-purple-lighten-3),
+    'lighten-2': var(--vt-c-purple-lighten-2),
+    'lighten-1': var(--vt-c-purple-lighten-1),
+    'darken-1': var(--vt-c-purple-darken-1),
+    'darken-2': var(--vt-c-purple-darken-2),
+    'darken-3': var(--vt-c-purple-darken-3),
+    'darken-4': var(--vt-c-purple-darken-4),
+    'accent-1': var(--vt-c-purple-accent-1),
+    'accent-2': var(--vt-c-purple-accent-2),
+    'accent-3': var(--vt-c-purple-accent-3),
+    'accent-4': var(--vt-c-purple-accent-4),
+  ),
+  $deep-purple: (
+    'base': var(--vt-c-deep-purple),
+    'lighten-5': var(--vt-c-deep-purple-lighten-5),
+    'lighten-4': var(--vt-c-deep-purple-lighten-4),
+    'lighten-3': var(--vt-c-deep-purple-lighten-3),
+    'lighten-2': var(--vt-c-deep-purple-lighten-2),
+    'lighten-1': var(--vt-c-deep-purple-lighten-1),
+    'darken-1': var(--vt-c-deep-purple-darken-1),
+    'darken-2': var(--vt-c-deep-purple-darken-2),
+    'darken-3': var(--vt-c-deep-purple-darken-3),
+    'darken-4': var(--vt-c-deep-purple-darken-4),
+    'accent-1': var(--vt-c-deep-purple-accent-1),
+    'accent-2': var(--vt-c-deep-purple-accent-2),
+    'accent-3': var(--vt-c-deep-purple-accent-3),
+    'accent-4': var(--vt-c-deep-purple-accent-4),
+  ),
+  $indigo: (
+    'base': var(--vt-c-indigo),
+    'lighten-5': var(--vt-c-indigo-lighten-5),
+    'lighten-4': var(--vt-c-indigo-lighten-4),
+    'lighten-3': var(--vt-c-indigo-lighten-3),
+    'lighten-2': var(--vt-c-indigo-lighten-2),
+    'lighten-1': var(--vt-c-indigo-lighten-1),
+    'darken-1': var(--vt-c-indigo-darken-1),
+    'darken-2': var(--vt-c-indigo-darken-2),
+    'darken-3': var(--vt-c-indigo-darken-3),
+    'darken-4': var(--vt-c-indigo-darken-4),
+    'accent-1': var(--vt-c-indigo-accent-1),
+    'accent-2': var(--vt-c-indigo-accent-2),
+    'accent-3': var(--vt-c-indigo-accent-3),
+    'accent-4': var(--vt-c-indigo-accent-4),
+  ),
+  $blue: (
+    'base': var(--vt-c-blue),
+    'lighten-5': var(--vt-c-blue-lighten-5),
+    'lighten-4': var(--vt-c-blue-lighten-4),
+    'lighten-3': var(--vt-c-blue-lighten-3),
+    'lighten-2': var(--vt-c-blue-lighten-2),
+    'lighten-1': var(--vt-c-blue-lighten-1),
+    'darken-1': var(--vt-c-blue-darken-1),
+    'darken-2': var(--vt-c-blue-darken-2),
+    'darken-3': var(--vt-c-blue-darken-3),
+    'darken-4': var(--vt-c-blue-darken-4),
+    'accent-1': var(--vt-c-blue-accent-1),
+    'accent-2': var(--vt-c-blue-accent-2),
+    'accent-3': var(--vt-c-blue-accent-3),
+    'accent-4': var(--vt-c-blue-accent-4),
+  ),
+  $light-blue: (
+    'base': var(--vt-c-light-blue),
+    'lighten-5': var(--vt-c-light-blue-lighten-5),
+    'lighten-4': var(--vt-c-light-blue-lighten-4),
+    'lighten-3': var(--vt-c-light-blue-lighten-3),
+    'lighten-2': var(--vt-c-light-blue-lighten-2),
+    'lighten-1': var(--vt-c-light-blue-lighten-1),
+    'darken-1': var(--vt-c-light-blue-darken-1),
+    'darken-2': var(--vt-c-light-blue-darken-2),
+    'darken-3': var(--vt-c-light-blue-darken-3),
+    'darken-4': var(--vt-c-light-blue-darken-4),
+    'accent-1': var(--vt-c-light-blue-accent-1),
+    'accent-2': var(--vt-c-light-blue-accent-2),
+    'accent-3': var(--vt-c-light-blue-accent-3),
+    'accent-4': var(--vt-c-light-blue-accent-4),
+  ),
+  $cyan: (
+    'base': var(--vt-c-cyan),
+    'lighten-5': var(--vt-c-cyan-lighten-5),
+    'lighten-4': var(--vt-c-cyan-lighten-4),
+    'lighten-3': var(--vt-c-cyan-lighten-3),
+    'lighten-2': var(--vt-c-cyan-lighten-2),
+    'lighten-1': var(--vt-c-cyan-lighten-1),
+    'darken-1': var(--vt-c-cyan-darken-1),
+    'darken-2': var(--vt-c-cyan-darken-2),
+    'darken-3': var(--vt-c-cyan-darken-3),
+    'darken-4': var(--vt-c-cyan-darken-4),
+    'accent-1': var(--vt-c-cyan-accent-1),
+    'accent-2': var(--vt-c-cyan-accent-2),
+    'accent-3': var(--vt-c-cyan-accent-3),
+    'accent-4': var(--vt-c-cyan-accent-4),
+  ),
+  $teal: (
+    'base': var(--vt-c-teal),
+    'lighten-5': var(--vt-c-teal-lighten-5),
+    'lighten-4': var(--vt-c-teal-lighten-4),
+    'lighten-3': var(--vt-c-teal-lighten-3),
+    'lighten-2': var(--vt-c-teal-lighten-2),
+    'lighten-1': var(--vt-c-teal-lighten-1),
+    'darken-1': var(--vt-c-teal-darken-1),
+    'darken-2': var(--vt-c-teal-darken-2),
+    'darken-3': var(--vt-c-teal-darken-3),
+    'darken-4': var(--vt-c-teal-darken-4),
+    'accent-1': var(--vt-c-teal-accent-1),
+    'accent-2': var(--vt-c-teal-accent-2),
+    'accent-3': var(--vt-c-teal-accent-3),
+    'accent-4': var(--vt-c-teal-accent-4),
+  ),
+  $green: (
+    'base': var(--vt-c-green),
+    'lighten-5': var(--vt-c-green-lighten-5),
+    'lighten-4': var(--vt-c-green-lighten-4),
+    'lighten-3': var(--vt-c-green-lighten-3),
+    'lighten-2': var(--vt-c-green-lighten-2),
+    'lighten-1': var(--vt-c-green-lighten-1),
+    'darken-1': var(--vt-c-green-darken-1),
+    'darken-2': var(--vt-c-green-darken-2),
+    'darken-3': var(--vt-c-green-darken-3),
+    'darken-4': var(--vt-c-green-darken-4),
+    'accent-1': var(--vt-c-green-accent-1),
+    'accent-2': var(--vt-c-green-accent-2),
+    'accent-3': var(--vt-c-green-accent-3),
+    'accent-4': var(--vt-c-green-accent-4),
+  ),
+  $light-green: (
+    'base': var(--vt-c-light-green),
+    'lighten-5': var(--vt-c-light-green-lighten-5),
+    'lighten-4': var(--vt-c-light-green-lighten-4),
+    'lighten-3': var(--vt-c-light-green-lighten-3),
+    'lighten-2': var(--vt-c-light-green-lighten-2),
+    'lighten-1': var(--vt-c-light-green-lighten-1),
+    'darken-1': var(--vt-c-light-green-darken-1),
+    'darken-2': var(--vt-c-light-green-darken-2),
+    'darken-3': var(--vt-c-light-green-darken-3),
+    'darken-4': var(--vt-c-light-green-darken-4),
+    'accent-1': var(--vt-c-light-green-accent-1),
+    'accent-2': var(--vt-c-light-green-accent-2),
+    'accent-3': var(--vt-c-light-green-accent-3),
+    'accent-4': var(--vt-c-light-green-accent-4),
+  ),
+  $lime: (
+    'base': var(--vt-c-lime),
+    'lighten-5': var(--vt-c-lime-lighten-5),
+    'lighten-4': var(--vt-c-lime-lighten-4),
+    'lighten-3': var(--vt-c-lime-lighten-3),
+    'lighten-2': var(--vt-c-lime-lighten-2),
+    'lighten-1': var(--vt-c-lime-lighten-1),
+    'darken-1': var(--vt-c-lime-darken-1),
+    'darken-2': var(--vt-c-lime-darken-2),
+    'darken-3': var(--vt-c-lime-darken-3),
+    'darken-4': var(--vt-c-lime-darken-4),
+    'accent-1': var(--vt-c-lime-accent-1),
+    'accent-2': var(--vt-c-lime-accent-2),
+    'accent-3': var(--vt-c-lime-accent-3),
+    'accent-4': var(--vt-c-lime-accent-4),
+  ),
+  $yellow: (
+    'base': var(--vt-c-yellow),
+    'lighten-5': var(--vt-c-yellow-lighten-5),
+    'lighten-4': var(--vt-c-yellow-lighten-4),
+    'lighten-3': var(--vt-c-yellow-lighten-3),
+    'lighten-2': var(--vt-c-yellow-lighten-2),
+    'lighten-1': var(--vt-c-yellow-lighten-1),
+    'darken-1': var(--vt-c-yellow-darken-1),
+    'darken-2': var(--vt-c-yellow-darken-2),
+    'darken-3': var(--vt-c-yellow-darken-3),
+    'darken-4': var(--vt-c-yellow-darken-4),
+    'accent-1': var(--vt-c-yellow-accent-1),
+    'accent-2': var(--vt-c-yellow-accent-2),
+    'accent-3': var(--vt-c-yellow-accent-3),
+    'accent-4': var(--vt-c-yellow-accent-4),
+  ),
+  $amber: (
+    'base': var(--vt-c-amber),
+    'lighten-5': var(--vt-c-amber-lighten-5),
+    'lighten-4': var(--vt-c-amber-lighten-4),
+    'lighten-3': var(--vt-c-amber-lighten-3),
+    'lighten-2': var(--vt-c-amber-lighten-2),
+    'lighten-1': var(--vt-c-amber-lighten-1),
+    'darken-1': var(--vt-c-amber-darken-1),
+    'darken-2': var(--vt-c-amber-darken-2),
+    'darken-3': var(--vt-c-amber-darken-3),
+    'darken-4': var(--vt-c-amber-darken-4),
+    'accent-1': var(--vt-c-amber-accent-1),
+    'accent-2': var(--vt-c-amber-accent-2),
+    'accent-3': var(--vt-c-amber-accent-3),
+    'accent-4': var(--vt-c-amber-accent-4),
+  ),
+  $orange: (
+    'base': var(--vt-c-orange),
+    'lighten-5': var(--vt-c-orange-lighten-5),
+    'lighten-4': var(--vt-c-orange-lighten-4),
+    'lighten-3': var(--vt-c-orange-lighten-3),
+    'lighten-2': var(--vt-c-orange-lighten-2),
+    'lighten-1': var(--vt-c-orange-lighten-1),
+    'darken-1': var(--vt-c-orange-darken-1),
+    'darken-2': var(--vt-c-orange-darken-2),
+    'darken-3': var(--vt-c-orange-darken-3),
+    'darken-4': var(--vt-c-orange-darken-4),
+    'accent-1': var(--vt-c-orange-accent-1),
+    'accent-2': var(--vt-c-orange-accent-2),
+    'accent-3': var(--vt-c-orange-accent-3),
+    'accent-4': var(--vt-c-orange-accent-4),
+  ),
+  $deep-orange: (
+    'base': var(--vt-c-deep-orange),
+    'lighten-5': var(--vt-c-deep-orange-lighten-5),
+    'lighten-4': var(--vt-c-deep-orange-lighten-4),
+    'lighten-3': var(--vt-c-deep-orange-lighten-3),
+    'lighten-2': var(--vt-c-deep-orange-lighten-2),
+    'lighten-1': var(--vt-c-deep-orange-lighten-1),
+    'darken-1': var(--vt-c-deep-orange-darken-1),
+    'darken-2': var(--vt-c-deep-orange-darken-2),
+    'darken-3': var(--vt-c-deep-orange-darken-3),
+    'darken-4': var(--vt-c-deep-orange-darken-4),
+    'accent-1': var(--vt-c-deep-orange-accent-1),
+    'accent-2': var(--vt-c-deep-orange-accent-2),
+    'accent-3': var(--vt-c-deep-orange-accent-3),
+    'accent-4': var(--vt-c-deep-orange-accent-4),
+  ),
+  $brown: (
+    'base': var(--vt-c-brown),
+    'lighten-5': var(--vt-c-brown-lighten-5),
+    'lighten-4': var(--vt-c-brown-lighten-4),
+    'lighten-3': var(--vt-c-brown-lighten-3),
+    'lighten-2': var(--vt-c-brown-lighten-2),
+    'lighten-1': var(--vt-c-brown-lighten-1),
+    'darken-1': var(--vt-c-brown-darken-1),
+    'darken-2': var(--vt-c-brown-darken-2),
+    'darken-3': var(--vt-c-brown-darken-3),
+    'darken-4': var(--vt-c-brown-darken-4),
+  ),
+  $blue-grey: (
+    'base': var(--vt-c-blue-grey),
+    'lighten-5': var(--vt-c-blue-grey-lighten-5),
+    'lighten-4': var(--vt-c-blue-grey-lighten-4),
+    'lighten-3': var(--vt-c-blue-grey-lighten-3),
+    'lighten-2': var(--vt-c-blue-grey-lighten-2),
+    'lighten-1': var(--vt-c-blue-grey-lighten-1),
+    'darken-1': var(--vt-c-blue-grey-darken-1),
+    'darken-2': var(--vt-c-blue-grey-darken-2),
+    'darken-3': var(--vt-c-blue-grey-darken-3),
+    'darken-4': var(--vt-c-blue-grey-darken-4),
+  ),
+  $grey: (
+    'base': var(--vt-c-grey),
+    'lighten-5': var(--vt-c-grey-lighten-5),
+    'lighten-4': var(--vt-c-grey-lighten-4),
+    'lighten-3': var(--vt-c-grey-lighten-3),
+    'lighten-2': var(--vt-c-grey-lighten-2),
+    'lighten-1': var(--vt-c-grey-lighten-1),
+    'darken-1': var(--vt-c-grey-darken-1),
+    'darken-2': var(--vt-c-grey-darken-2),
+    'darken-3': var(--vt-c-grey-darken-3),
+    'darken-4': var(--vt-c-grey-darken-4),
+  ),
+  $shades: (
+    'black': var(--vt-c-black),
+    'white': var(--vt-c-white),
+    'transparent': var(--vt-c-transparent),
+  )
+
 );
