--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,6 @@
+@import 'vuetify/lib/styles/settings/colors';
 @import './base.scss';
+@import "./leaflet.scss";
 
 #app {
   margin: 0 auto;
@@ -12,6 +14,17 @@
   }
 }
 
+nav {
+  margin: 0 !important;
+  padding-top: 0 !important;
+}
+
+@media (max-width: 600px) {
+  nav {
+    width: 100% !important;
+  }
+}
+
 @media (min-width: 1024px) {
   body {
     //display: flex;
@@ -20,7 +33,7 @@
 
   #app {
     //display: grid;
-    //grid-template-columns: 1fr 1fr;
+    //grid-template-columns: 1fr 4fr;
     //padding: 0;
   }
 }
